Fix header spacing

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -13,6 +13,10 @@ header {
     color: $background-white;
   }
 
+  .header__back-button {
+    margin-left: 15px;
+  }
+
   h1,h2,h3 {
     position: absolute;
     left: 50%;
