--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -33,5 +33,6 @@ section {
   header {
     position: absolute;
     top: 0;
+    right: 0;
   }
 }
